MLDSLParser.py
# Generated from MLDSL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MLDSLParser ( Parser ):

    grammarFileName = "MLDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'='", "';'", "'linearRegression'", 
                     "'('", "','", "')'", "'perceptron'", "'clustering'", 
                     "'print'", "'if'", "'{'", "'}'", "'else'", "'>'", "'<'", 
                     "'=='", "'!='", "'>='", "'<='", "'for'", "'while'", 
                     "'def'", "'return'", "'^'", "'*'", "'/'", "'+'", "'-'", 
                     "'sqrt'", "'sin'", "'cos'", "'tan'", "'['", "']'", 
                     "'plot'", "'read'", "'write'", "'matrix'", "'inverse'", 
                     "'transpose'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "NUMBER", "ID", 
                      "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_variableDeclaration = 2
    RULE_assignment = 3
    RULE_mlOperation = 4
    RULE_printStatement = 5
    RULE_conditional = 6
    RULE_condition = 7
    RULE_comparisonOperator = 8
    RULE_loop = 9
    RULE_functionDeclaration = 10
    RULE_parameterList = 11
    RULE_argumentList = 12
    RULE_expression = 13
    RULE_functionCall = 14
    RULE_trigFunction = 15
    RULE_listExpression = 16
    RULE_plotStatement = 17
    RULE_fileOperation = 18
    RULE_matrixDeclaration = 19
    RULE_matrixExpr = 20
    RULE_matrixRows = 21
    RULE_matrixRow = 22
    RULE_matrixInverse = 23
    RULE_matrixTranspose = 24

    ruleNames =  [ "program", "statement", "variableDeclaration", "assignment", 
                   "mlOperation", "printStatement", "conditional", "condition", 
                   "comparisonOperator", "loop", "functionDeclaration", 
                   "parameterList", "argumentList", "expression", "functionCall", 
                   "trigFunction", "listExpression", "plotStatement", "fileOperation", 
                   "matrixDeclaration", "matrixExpr", "matrixRows", "matrixRow", 
                   "matrixInverse", "matrixTranspose" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    STRING=42
    NUMBER=43
    ID=44
    WS=45
    COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MLDSLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLDSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(MLDSLParser.StatementContext,i)


        def getRuleIndex(self):
            return MLDSLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MLDSLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18073237065490) != 0):
                self.state = 50
                self.statement()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(MLDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(MLDSLParser.VariableDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MLDSLParser.AssignmentContext,0)


        def mlOperation(self):
            return self.getTypedRuleContext(MLDSLParser.MlOperationContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(MLDSLParser.PrintStatementContext,0)


        def conditional(self):
            return self.getTypedRuleContext(MLDSLParser.ConditionalContext,0)


        def loop(self):
            return self.getTypedRuleContext(MLDSLParser.LoopContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(MLDSLParser.FunctionDeclarationContext,0)


        def fileOperation(self):
            return self.getTypedRuleContext(MLDSLParser.FileOperationContext,0)


        def plotStatement(self):
            return self.getTypedRuleContext(MLDSLParser.PlotStatementContext,0)


        def matrixDeclaration(self):
            return self.getTypedRuleContext(MLDSLParser.MatrixDeclarationContext,0)


        def matrixInverse(self):
            return self.getTypedRuleContext(MLDSLParser.MatrixInverseContext,0)


        def matrixTranspose(self):
            return self.getTypedRuleContext(MLDSLParser.MatrixTransposeContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MLDSLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.mlOperation()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.printStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                self.conditional()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 63
                self.loop()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 64
                self.functionDeclaration()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 65
                self.fileOperation()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 66
                self.plotStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 67
                self.matrixDeclaration()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 68
                self.matrixInverse()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 69
                self.matrixTranspose()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MLDSLParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(MLDSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = MLDSLParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(MLDSLParser.T__0)
            self.state = 73
            self.match(MLDSLParser.ID)
            self.state = 74
            self.match(MLDSLParser.T__1)
            self.state = 75
            self.expression(0)
            self.state = 76
            self.match(MLDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MLDSLParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(MLDSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = MLDSLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(MLDSLParser.ID)
            self.state = 79
            self.match(MLDSLParser.T__1)
            self.state = 80
            self.expression(0)
            self.state = 81
            self.match(MLDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MlOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MLDSLParser.ID)
            else:
                return self.getToken(MLDSLParser.ID, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MLDSLParser.NUMBER)
            else:
                return self.getToken(MLDSLParser.NUMBER, i)

        def getRuleIndex(self):
            return MLDSLParser.RULE_mlOperation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMlOperation" ):
                listener.enterMlOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMlOperation" ):
                listener.exitMlOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlOperation" ):
                return visitor.visitMlOperation(self)
            else:
                return visitor.visitChildren(self)




    def mlOperation(self):

        localctx = MLDSLParser.MlOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mlOperation)
        self._la = 0 # Token type
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.match(MLDSLParser.T__3)
                self.state = 84
                self.match(MLDSLParser.T__4)
                self.state = 85
                self.match(MLDSLParser.ID)
                self.state = 86
                self.match(MLDSLParser.T__5)
                self.state = 87
                self.match(MLDSLParser.ID)
                self.state = 88
                self.match(MLDSLParser.T__5)
                self.state = 89
                self.match(MLDSLParser.ID)
                self.state = 90
                self.match(MLDSLParser.T__6)
                self.state = 91
                self.match(MLDSLParser.T__2)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(MLDSLParser.T__7)
                self.state = 93
                self.match(MLDSLParser.T__4)
                self.state = 94
                self.match(MLDSLParser.ID)
                self.state = 95
                self.match(MLDSLParser.T__5)
                self.state = 96
                self.match(MLDSLParser.ID)
                self.state = 97
                self.match(MLDSLParser.T__5)
                self.state = 98
                self.match(MLDSLParser.ID)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 99
                    self.match(MLDSLParser.T__5)
                    self.state = 100
                    self.match(MLDSLParser.NUMBER)
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==6:
                        self.state = 101
                        self.match(MLDSLParser.T__5)
                        self.state = 102
                        self.match(MLDSLParser.NUMBER)




                self.state = 107
                self.match(MLDSLParser.T__6)
                self.state = 108
                self.match(MLDSLParser.T__2)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.match(MLDSLParser.T__8)
                self.state = 110
                self.match(MLDSLParser.T__4)
                self.state = 111
                self.match(MLDSLParser.ID)
                self.state = 112
                self.match(MLDSLParser.T__5)
                self.state = 113
                self.match(MLDSLParser.ID)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 114
                    self.match(MLDSLParser.T__5)
                    self.state = 115
                    self.match(MLDSLParser.NUMBER)


                self.state = 118
                self.match(MLDSLParser.T__6)
                self.state = 119
                self.match(MLDSLParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MLDSLParser.ExpressionContext,0)


        def STRING(self):
            return self.getToken(MLDSLParser.STRING, 0)

        def getRuleIndex(self):
            return MLDSLParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = MLDSLParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MLDSLParser.T__9)
            self.state = 123
            self.match(MLDSLParser.T__4)
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 29, 30, 31, 32, 33, 34, 43, 44]:
                self.state = 124
                self.expression(0)
                pass
            elif token in [42]:
                self.state = 125
                self.match(MLDSLParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 128
            self.match(MLDSLParser.T__6)
            self.state = 129
            self.match(MLDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._statement = None # StatementContext
            self.ifStats = list() # of StatementContexts
            self.elseStats = list() # of StatementContexts

        def condition(self):
            return self.getTypedRuleContext(MLDSLParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLDSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(MLDSLParser.StatementContext,i)


        def getRuleIndex(self):
            return MLDSLParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = MLDSLParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(MLDSLParser.T__10)
            self.state = 132
            self.match(MLDSLParser.T__4)
            self.state = 133
            self.condition()
            self.state = 134
            self.match(MLDSLParser.T__6)
            self.state = 135
            self.match(MLDSLParser.T__11)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18073237065490) != 0):
                self.state = 136
                localctx._statement = self.statement()
                localctx.ifStats.append(localctx._statement)
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(MLDSLParser.T__12)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 143
                self.match(MLDSLParser.T__13)
                self.state = 144
                self.match(MLDSLParser.T__11)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18073237065490) != 0):
                    self.state = 145
                    localctx._statement = self.statement()
                    localctx.elseStats.append(localctx._statement)
                    self.state = 150
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 151
                self.match(MLDSLParser.T__12)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLDSLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MLDSLParser.ExpressionContext,i)


        def comparisonOperator(self):
            return self.getTypedRuleContext(MLDSLParser.ComparisonOperatorContext,0)


        def getRuleIndex(self):
            return MLDSLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = MLDSLParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.expression(0)
            self.state = 155
            self.comparisonOperator()
            self.state = 156
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MLDSLParser.RULE_comparisonOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonOperator" ):
                listener.enterComparisonOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonOperator" ):
                listener.exitComparisonOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparisonOperator" ):
                return visitor.visitComparisonOperator(self)
            else:
                return visitor.visitChildren(self)




    def comparisonOperator(self):

        localctx = MLDSLParser.ComparisonOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comparisonOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2064384) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLDSLParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(MLDSLParser.AssignmentContext,i)


        def condition(self):
            return self.getTypedRuleContext(MLDSLParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLDSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(MLDSLParser.StatementContext,i)


        def getRuleIndex(self):
            return MLDSLParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = MLDSLParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loop)
        self._la = 0 # Token type
        try:
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(MLDSLParser.T__20)
                self.state = 161
                self.match(MLDSLParser.T__4)
                self.state = 162
                self.assignment()
                self.state = 163
                self.condition()
                self.state = 164
                self.match(MLDSLParser.T__2)
                self.state = 165
                self.assignment()
                self.state = 166
                self.match(MLDSLParser.T__6)
                self.state = 167
                self.match(MLDSLParser.T__11)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18073237065490) != 0):
                    self.state = 168
                    self.statement()
                    self.state = 173
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 174
                self.match(MLDSLParser.T__12)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(MLDSLParser.T__21)
                self.state = 177
                self.match(MLDSLParser.T__4)
                self.state = 178
                self.condition()
                self.state = 179
                self.match(MLDSLParser.T__6)
                self.state = 180
                self.match(MLDSLParser.T__11)
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18073237065490) != 0):
                    self.state = 181
                    self.statement()
                    self.state = 186
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 187
                self.match(MLDSLParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MLDSLParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(MLDSLParser.ExpressionContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(MLDSLParser.ParameterListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLDSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(MLDSLParser.StatementContext,i)


        def getRuleIndex(self):
            return MLDSLParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = MLDSLParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(MLDSLParser.T__22)
            self.state = 192
            self.match(MLDSLParser.ID)
            self.state = 193
            self.match(MLDSLParser.T__4)
            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==44:
                self.state = 194
                self.parameterList()


            self.state = 197
            self.match(MLDSLParser.T__6)
            self.state = 198
            self.match(MLDSLParser.T__11)
            self.state = 202
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18073237065490) != 0):
                self.state = 199
                self.statement()
                self.state = 204
                self._errHandler.sync(self)
                _la = self._input.LA(1)
